# PersonalFinanceTracker

./: .gitignore  First.toml  LICENSE  README.md  README2.md  data_model.drawio  data_model.mwb  sample.json
CLI/: pom.xml
GUI/: body_gui.py  header_gui.py  main.py  process_handler.py  sample_return.txt  temp_input.py  utils.py
GUI/buttons/: shadow_button.py
GUI/custom_widgets/: RecordWidget.py
app_rs/: package-lock.json  package.json  vite.config.js
app_rs/public/fonts/: fontHandler.scss
app_rs/src/: App.jsx  App.scss  index.scss  main.jsx  store.js  utils.js
app_rs/src-tauri/: Cargo.toml  tauri.conf.json
app_rs/src-tauri/src/: appenders.rs  getters.rs  (+3 more)
docs/: CONTRIBUTING.md
pf_tracker_cli/: Cargo.toml
pf_tracker_cli/src/: main.rs  receipt.rs
pf_tracker_rs/: Cargo.toml
pf_tracker_rs/pf_tracker_cli/: Cargo.toml
pf_tracker_rs/pf_tracker_lib/: Cargo.toml
simple_tracker_py/: README.md  create_table.sql  finances.db  main.py
simple_tracker_rs/: Cargo.toml  README.md  prepareDB.sh  sample.db
simple_tracker_rs/src/: main.rs  shared.rs
simple_tracker_rs/src/inquire_handler/: category.rs  item.rs  mod.rs
simple_tracker_rs/src/inquire_handler/receipt/: create.rs  mod.rs  read.rs
simple_tracker_rs/src/inquire_handler/venue/: mod.rs
simple_tracker_rs/src/sql_handler/: create_data.rs  create_tables.rs  data.db  mod.rs  models.rs  read_data.rs
simple_tracker_rs/src/sql_handler/models/: item.rs  mod.rs  receipt.rs
utils/: Cargo.toml
utils/pf_tracker_cli/: Cargo.toml
utils/pf_tracker_cli/src/: main.rs
utils/pf_tracker_lib/: Cargo.toml
(+65 files in other folders)
