[package]
name = "simple_tracker_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.3", features = ["sqlite", "macros"] }
inquire = "0.6.2"
tokio = { version = "1.34.0", features = ["full"] }
