[package]
name = "pf_tracker_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.24", features = ["derive"] }
pf_tracker_lib = {path = "../pf_tracker_lib" }
toml = "0.4.2"
serde = "1.0.147"
serde_derive = "1.0.147"

